# wealth-tracker

./: .dockerignore  .env.example  .gitignore  COMMIT_MESSAGE.md  Dockerfile.chrome_singlefile  Dockerfile.parse_investing  Dockerfile.scrapers  FIX_SUMMARY.txt  FRESH_CONTAINER_FIXES_SUMMARY.md  FRESH_CONTAINER_ISSUES.md  GITHUB_ACTIONS_PERMISSION_FIX.md  IMPLEMENTATION_PROGRESS.md  INTEGRATION_TEST_FIXES_SUMMARY.md  LICENSE  METADATA_FIX_COMMIT.md  PHASE_10_BOND_TESTS_SUMMARY.md  PHASE_3_COMPLETE.md  PHASE_4_COMMIT_MESSAGE.txt  PHASE_4_COMPLETE.txt  PHASE_4_SUMMARY.md  PHASE_5_COMMIT_MESSAGE.txt  PHASE_5_COMPLETE.txt  PHASE_6_COMMIT_MESSAGE.txt  PHASE_6_COMPLETE.txt  PHASE_7_COMMIT_MESSAGE.txt  PHASE_7_COMPLETE.txt  PHASE_8_1_COMPLETE.txt  PHASE_8_2_COMPLETE.txt  PHASE_8_3_COMPLETE.txt  PHASE_8_4_COMMIT_MESSAGE.txt  PHASE_8_4_COMPLETE.txt  PHASE_8_COMPLETE.txt  PHASE_8_PROGRESS.txt  PHASE_9_2_COMPLETION_SUMMARY.md  PHASE_9_2_FILES_MANIFEST.md  PHASE_9_2_IMPLEMENTATION_GUIDE.md  PHASE_9_3_COMPLETION_SUMMARY.md  PHASE_9_3_IMPLEMENTATION_GUIDE.md  PHASE_9_4_PLAN.md  PHASE_9_4_TESTING_CI.md  (+141 more)
api/: autocomplete.js  cleanup.js  metadata.js  metrics.js  statistics.js
config/: Auctions_Query_19791115_20251215.csv  assets_liabilities.example.json  config.example.json  config.json  investing-crypto.csv  metadata_cron.conf  source_priority.json  us-treasury-auctions.csv
coverage/: index.html  lcov.info
dashboard/: Dockerfile  config.js  package-lock.json  package.json  position_body.js  server.js  simulate_kafka_data.js  ticker_registry.js
docker/: Dockerfile.api-scraper  (+4 more)
(+538 files in other folders)
